# unreal-mcp

./: README.md
.cursor/: mcp.json
Docs/: Enhanced_Input_Features.md
Docs/Tools/: README.md  material_tools.md  project_tools.md
MCPGameProjects/5.5/: build.bat
MCPGameProjects/5.5/Plugins/UnrealMCP/: UnrealMCP.uplugin
MCPGameProjects/5.5/Plugins/UnrealMCP/Source/UnrealMCP/Private/: MCPServerRunnable.cpp
MCPGameProjects/5.5/Plugins/UnrealMCP/Source/UnrealMCP/Private/Commands/: UnrealMCPBlueprintNodeCommands.cpp
MCPGameProjects/5.6/: MCPGameProject.sln  build.bat
MCPGameProjects/5.6/Config/: DefaultEngine.ini
MCPGameProjects/5.6/Plugins/UnrealMCP/: UnrealMCP.uplugin
MCPGameProjects/5.6/Plugins/UnrealMCP/Source/UnrealMCP/Private/: MCPServerRunnable.cpp  UnrealMCPBridge.cpp
MCPGameProjects/5.6/Plugins/UnrealMCP/Source/UnrealMCP/Public/: UnrealMCPBridge.h
MCPGameProjects/5.6/Source/: MCPGameProject.Target.cs  MCPGameProjectEditor.Target.cs
MCPGameProjects/5.6/Source/MCPGameProject/: MCPGameProject.Build.cs  MCPGameProject.cpp
Python/: README.md  pyproject.toml  unreal_mcp_server.py
Python/config/: README.md  development.yaml  production.yaml  unreal_mcp.json  unreal_mcp.yaml
Python/tools/: animation_blueprint_tools.py  asset_discovery.py  blueprint_tools.py  config_manager.py  editor_tools.py  enhanced_input_tools.py  material_tools.py  node_tools.py  project_tools.py  system_diagnostics.py  umg_discovery.py  umg_events.py  umg_reflection.py  umg_styling.py  umg_tools.py
(+8 files in other folders)
