[project]
name = "unreal-mcp"
version = "0.2.0"
description = "Unreal MCP Server: A server for Unreal Engine integration via the Model Context Protocol (MCP)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.15.0",
  "fastmcp>=2.12.4",
  "uvicorn>=0.37.0",
  "fastapi>=0.118.0",
  "pydantic>=2.11.9",
  "requests>=2.32.5",
  "pyyaml>=6.0",
  "tomli>=2.0.0",
  "tomli-w>=1.0.0"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# The main server script is a single-file module
py-modules = ["unreal_mcp_server"] 
